--- a/views/utilizadorer.jade
+++ b/views/utilizadorer.jade
@@ -52,29 +52,24 @@ block content
 								option(value="", data-cont="") Selecione a região
 							-for(let i=0; i<AdMagen[0].regiao.length; i++)
 								option(value="#{AdMagen[0].regiao[i].nome}", data-cont="#{AdMagen[0].regiao[i]._id}") #{AdMagen[0].regiao[i].nome}
-					.col.s12.m6
+					.col.s12.m6#diregional.hide
 						label(for="director_regional") Director Regional
-						select.browser-default(name="director_regional", id="director_regional", style="font-family:")
-							option(value="", data-cont="") Selecione o Director Regional
+						select.browser-default(name="director_regional", readonly, id="director_regional", style="font-family:")
+							option(value="", data-cont="") Nenhuma região selecionada
 					.col.s12.m6
 						label(for="provincia_trabalho") <span data-i18n="demo.utilizador_form.provincia"></span>
-						select.browser-default.browser-default(name="provincia_trabalho", id="provincia_trabalho", style="font-family:")
+						select.browser-default(name="provincia_trabalho", id="provincia_trabalho", style="font-family:")
 								option(value="", data-cont="") Selecione a província
-					.col.s12.m6
+					.col.s12.m6.disabled
 						label(for="nome_supervisor") <span data-i18n="demo.utilizador_form.supervisor"></span>
 						select.browser-default(id="nome_supervisor", name="nome_supervisor")
 							-for(let i=0; i<1; i++)
 									option(value="", data-cont="") Selecione o supervisor
-							-for(let i=0; i<supers.length; i++)
-								option(value="#{supers[i].nome}" , data-cont="#{supers[i]._id}") #{supers[i].departamento} - #{supers[i].nome} 
 					.col.s12.m6
 						label(for="telefone_supervisor") <span data-i18n="demo.utilizador_form.telefone_super"></span>
 						select.browser-default(id="telefone_supervisor", name="telefone_supervisor")
 							-for(let i=0; i<1; i++)
-									option(value="", data-cont="") Selecione o telefone do supervisor
-							-for(let i=0; i<supers.length; i++)
-								option(value="#{supers[i].telefone_1}" , data-cont="#{supers[i]._id}") #{supers[i].telefone_1} - #{supers[i].nome}
-					
+									option(value="", data-cont="") Selecione o telefone do supervisor					
 
 			fieldset.no-border.legend-border.exclusivo
 				legend.selmecAzul.bold <span data-i18n="demo.utilizador_form.veiculo"></span>
@@ -141,46 +136,102 @@ block content
 			var cargo = document.getElementById('funcao');  
 			var diregional = document.getElementById('director_regional');
 
+			var superv = document.getElementById('nome_supervisor');
+			var tel_superv = document.getElementById('telefone_supervisor');
+
 			region.onchange = () => {	
 				
 				switch($("#regiao").val()) {
 					case "maputo":
-						province.innerHTML = "<option value=Maputo data-cont=611df4937d82f600d87c4be4>Maputo</option>";
-						diregional.innerHTML = "<option value=Samuel David>Samuel David</option>";	
+						province.innerHTML = "<option value=>Seleccione a província</option><option value=Maputo data-cont=611df4937d82f600d87c4be4>Maputo</option>";
+						diregional.innerHTML = "<option value='Samuel David'>Samuel David</option>";	
 						break;
 					case "sul":
-						province.innerHTML = "<option value=Gaza data-cont=611e23d0f9b1b31cd868a302>Gaza</option><option value=Inhambane data-cont=611e23f0f9b1b31cd868a303>Inhambane</option>";	
-						diregional.innerHTML = "<option value=Albino Cuamba>Albino Cuamba</option>";	
+						province.innerHTML = "<option value=>Seleccione a província</option><option value=Gaza data-cont=611e23d0f9b1b31cd868a302>Gaza</option><option value=Inhambane data-cont=611e23f0f9b1b31cd868a303>Inhambane</option>";	
+						diregional.innerHTML = "<option value='Albino Cuamba'>Albino Cuamba</option>";	
 						break;
 					case "centro":
-						province.innerHTML = "<option value=Sofala data-cont=611e243af9b1b31cd868a304>Sofala</option><option value=Manica data-cont=611e245af9b1b31cd868a305>Manica</option><option value=Zambezia data-cont=611e2485f9b1b31cd868a306>Zambezia</option><option value=Tete data-cont=611e24bef9b1b31cd868a307>Tete</option>";	
-						diregional.innerHTML = "<option value=Dalilio Chigoi>Dalilio Chigoi</option>";
+						province.innerHTML = "<option value=>Seleccione a província</option><option value=Sofala data-cont=611e243af9b1b31cd868a304>Sofala</option><option value=Manica data-cont=611e245af9b1b31cd868a305>Manica</option><option value=Zambezia data-cont=611e2485f9b1b31cd868a306>Zambezia</option><option value=Tete data-cont=611e24bef9b1b31cd868a307>Tete</option>";	
+						diregional.innerHTML = "<option value='Dalilio Chigoi'>Dalilio Chigoi</option>";
 						break;
 					case "norte":
-						province.innerHTML = "<option value=Nampula data-cont=611e24eef9b1b31cd868a308>Nampula</option><option value=Niassa data-cont=611e250ef9b1b31cd868a309>Niassa</option><option value=Cabo Delgado data-cont=611e2577f9b1b31cd868a30a>Cabo Delgado</option>";	
-						diregional.innerHTML = "<option value=Pedro Ribeiro>Pedro Ribeiro</option>";
+						province.innerHTML = '<option value=>Seleccione a província</option><option value=Nampula data-cont=611e24eef9b1b31cd868a308>Nampula</option><option value=Niassa data-cont=611e250ef9b1b31cd868a309>Niassa</option><option value="Cabo Delgado" data-cont=611e2577f9b1b31cd868a30a>Cabo Delgado</option>';	
+						diregional.innerHTML = "<option value='Pedro Ribeiro'>Pedro Ribeiro</option>";
 					break;
 				}
 
 			}
 
+			province.onchange = () => {
+
+				if ($("#departamento").val() == "Telco") {
+					
+						switch($("#provincia_trabalho").val()) {
+							case "Maputo":
+								superv.innerHTML = "<option value='Juma Adamo'>Juma Adamo</option>";
+								tel_superv.innerHTML = "<option value=+25884990>+25884990</option>";	
+								break;
+							case "Gaza":
+								superv.innerHTML = "<option value='Helder Faife'>Helder Faife</option>";
+								tel_superv.innerHTML = "<option value=+258849903111>+258849903111</option>";		
+								break;
+							case "Inhambane":
+								superv.innerHTML = "<option value='Albino Cuamba'>Albino Cuamba</option>";
+								tel_superv.innerHTML = "<option value=+258849903061>+258849903061</option>";	
+								break;
+							case "Sofala":
+								superv.innerHTML = "<option value='Dalilio Chigoi'>Dalilio Chigoi</option>";
+								tel_superv.innerHTML = "<option value=+258849903029>+258849903029</option>";	
+								break;
+							case "Manica":
+								superv.innerHTML = "<option value='Valter Malate'>Valter Malate</option>";
+								tel_superv.innerHTML = "<option value=+258849903031>+258849903031</option>";	
+								break;
+							case "Zambezia":
+								superv.innerHTML = "<option value='Aboo Bakar'>Aboo Bakar</option>";
+								tel_superv.innerHTML = "<option value=+258849903063>+258849903063</option>";	
+								break;
+							case "Tete":
+								superv.innerHTML = "<option value='Nelson Manuel'>Nelson Manuel</option>";
+								tel_superv.innerHTML = "<option value=+258849903054>+258849903054</option>";	
+								break;
+							case "Nampula":
+								superv.innerHTML = "<option value='Pedro Ribeiro'>Pedro Ribeiro</option>";
+								tel_superv.innerHTML = "<option value=+258849903076>+258849903076</option>";	
+								break;
+							case "Niassa":
+								superv.innerHTML = "<option value='Jose Fernandes'>Jose Fernandes</option>";
+								tel_superv.innerHTML = "<option value=+258849903025>+258849903025</option>";		
+								break;
+							case "Cabo Delgado":
+								superv.innerHTML = "<option value='Sergio Da Silveira'>Sergio Da Silveira</option>";
+								tel_superv.innerHTML = "<option value=+258849903071>+258849903071</option>";		
+								break;
+							
+					     }
+								
+				}
+
+			}
+
+
 			dep.onchange = () => {	
 
 				switch($("#departamento").val()) {
 					case "Telco":
-						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Regional Manager data-cont=611e2b8cf9b1b31cd868a30c>Director Regional</option><option value=regional_manager data-cont=611e3b3d6ed713019c50cf79>Supervisor</option><option value=Tecnico data-cont=616988fcd5a85a0794a0fbf9>Tecnico</option><option value=Assistente data-cont=611ded707d82f600d87c4be3>Assistente</option>";	
+						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value='Regional Manager' data-cont=611e2b8cf9b1b31cd868a30c>Director Regional</option><option value=regional_manager data-cont=611e3b3d6ed713019c50cf79>Supervisor</option><option value=Tecnico data-cont=616988fcd5a85a0794a0fbf9>Tecnico</option><option value=Assistente data-cont=611ded707d82f600d87c4be3>Assistente</option>";	
 						break;
 					case "Climatização e Electricidade":
-						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Regional Manager data-cont=611e2b8cf9b1b31cd868a30c>Director Regional</option><option value=regional_manager data-cont=611e3b3d6ed713019c50cf79>Supervisor</option><option value=Tecnico data-cont=616988fcd5a85a0794a0fbf9>Tecnico</option><option value=Assistente data-cont=611ded707d82f600d87c4be3>Assistente</option><option value=Commercial data-cont=611e6bd559c6e30a006ede59>Commercial</option>";	
+						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value='Regional Manager' data-cont=611e2b8cf9b1b31cd868a30c>Director Regional</option><option value=regional_manager data-cont=611e3b3d6ed713019c50cf79>Supervisor</option><option value=Tecnico data-cont=616988fcd5a85a0794a0fbf9>Tecnico</option><option value=Assistente data-cont=611ded707d82f600d87c4be3>Assistente</option><option value=Commercial data-cont=611e6bd559c6e30a006ede59>Commercial</option>";	
 						break;
 					case "Financeiro":
 						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Contabilista data-cont=63fe12569d5ad1356cbb6062>Contabilista</option><option value=Procurement data-cont=615336500bd5ed0cdc5ea1a8>Procurement</option><option value=Assistente data-cont=611ded707d82f600d87c4be3>Assistente</option>";	
 						break;
 					case "Tecnologias de Informação":
-						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Manager data-cont=627e49eacba3d2105c26ed35>Analista de Informática</option><option value=Tecnico data-cont=616988fcd5a85a0794a0fbf9>Tecnico</option><option value=Assistente data-cont=611ded707d82f600d87c4be3>Assistente</option>";	
+						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value='Analista de Informática' data-cont=627e49eacba3d2105c26ed35>Analista de Informática</option><option value=Tecnico data-cont=616988fcd5a85a0794a0fbf9>Tecnico</option><option value=Assistente data-cont=611ded707d82f600d87c4be3>Assistente</option>";	
 						break;
 					case "Centro de Dados":
-						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Regional Manager data-cont=611e2b8cf9b1b31cd868a30c>Director Regional</option><option value=regional_manager data-cont=611e3b3d6ed713019c50cf79>Supervisor</option><option value=Tecnico data-cont=616988fcd5a85a0794a0fbf9>Tecnico</option><option value=Assistente data-cont=611ded707d82f600d87c4be3>Assistente</option>";	
+						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value='Regional Manager' data-cont=611e2b8cf9b1b31cd868a30c>Director Regional</option><option value=regional_manager data-cont=611e3b3d6ed713019c50cf79>Supervisor</option><option value=Tecnico data-cont=616988fcd5a85a0794a0fbf9>Tecnico</option><option value=Assistente data-cont=611ded707d82f600d87c4be3>Assistente</option>";	
 						break;
 					case "Energia":
 						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Tecnico data-cont=616988fcd5a85a0794a0fbf9>Tecnico</option><option value=Assistente data-cont=611ded707d82f600d87c4be3>Assistente</option><option value=Commercial data-cont=611e6bd559c6e30a006ede59>Commercial</option>";	
@@ -192,10 +243,10 @@ block content
 						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Tecnico data-cont=616988fcd5a85a0794a0fbf9>Tecnico</option><option value=Assistente data-cont=611ded707d82f600d87c4be3>Assistente</option>";	
 						break;
 					case "Centro de Suporte de Operações":
-						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Call Center data-cont=63edea83d0fb2331e0e40eb9>Call Center</option>";	
+						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value='Call Center' data-cont=63edea83d0fb2331e0e40eb9>Call Center</option>";	
 						break;
 					case "Logística e Armazém":
-						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Motorista data-cont=63fe12b27f40bc2d28aa758e>Motorista</option><option value=Fiel de Armazém data-cont=63fe136a72cae53f58eb366d>Fiel de Armazém</option><option value=Assistente data-cont=611ded707d82f600d87c4be3>Assistente</option>";	
+						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Motorista data-cont=63fe12b27f40bc2d28aa758e>Motorista</option><option value='Fiel de Armazém' data-cont=63fe136a72cae53f58eb366d>Fiel de Armazém</option><option value=Assistente data-cont=611ded707d82f600d87c4be3>Assistente</option>";	
 						break;
 					case "Recursos Humanos":
 						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Assistente data-cont=611ded707d82f600d87c4be3>Assistente</option>";	
@@ -204,6 +255,64 @@ block content
 						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) Geral</option>";	
 						break;
 				}
+
+					if ($("#departamento").val() == "Telco") {
+							superv.innerHTML = "<option value=></option>";
+							tel_superv.innerHTML = "<option value=></option>";
+					}
+	
+					else if ($("#departamento").val() != "Telco") {
+						
+						switch($("#departamento").val()) {
+							case "Climatização e Electricidade":
+								superv.innerHTML = "<option value='Rogerio Galrito'>Rogerio Galrito</option>";
+								tel_superv.innerHTML = "<option value=+258849903016>+258849903016</option>";	
+								break;
+							case "Financeiro":
+								superv.innerHTML = "<option value='Neila Cassam'>Neila Cassam</option>";
+								tel_superv.innerHTML = "<option value=+258849903099>+258849903099</option>";		
+								break;
+							case "Tecnologias de Informação":
+								superv.innerHTML = "<option value='Luis Brazuna'>Luis Brazuna</option>";
+								tel_superv.innerHTML = "<option value=+258849903010>+258849903010</option>";	
+								break;
+							case "Centro de Dados":
+								superv.innerHTML = "<option value='Teresa Guimaraes'>Teresa Guimaraes</option>";
+								tel_superv.innerHTML = "<option value=+258849903020>+258849903020</option>";	
+								break;
+							case "Energia":
+								superv.innerHTML = "<option value='William Goldswain'>William Goldswain</option>";
+								tel_superv.innerHTML = "<option value=+258849903018>+258849903018</option>";	
+								break;
+							case "Administrativo":
+								superv.innerHTML = "<option value='Faiza Tricamo'>Faiza Tricamo</option>";
+								tel_superv.innerHTML = "<option value=+258849903024>+258849903024</option>";	
+								break;
+							case "Qualidade e Otimização":
+								superv.innerHTML = "<option value='Teresa Guimaraes'>Teresa Guimaraes</option>";
+								tel_superv.innerHTML = "<option value=+258849903020>+258849903020</option>";	
+								break;
+							case "Centro de Suporte de Operações":
+								superv.innerHTML = "<option value='Livio Manuel'>Livio Manuel</option>";
+								tel_superv.innerHTML = "<option value=+258849903052>+258849903052</option>";	
+								break;
+							case "Logística e Armazém":
+								superv.innerHTML = "<option value='David Nhantumbo'>David Nhantumbo</option>";
+								tel_superv.innerHTML = "<option value=+258849903034>+258849903034</option>";	
+								break;
+							case "Recursos Humanos":
+								superv.innerHTML = "<option value='Teresa Mazive'>Teresa Mazive</option>";
+								tel_superv.innerHTML = "<option value=+258849903391>+258849903391</option>";	
+								break;
+							case "Direcção Geral":
+								superv.innerHTML = "<option value='Luis Brazuna'>Luis Brazuna</option>";
+								tel_superv.innerHTML = "<option value=+258849903010>+258849903010</option>";	
+								break;
+							 default:
+							}	
+
+					}
+
 			}
 
 
