--- a/views/utilizadorer.jade
+++ b/views/utilizadorer.jade
@@ -1,7 +1,7 @@
 extends layout
 block content
 	.seccao.container.white
-		form(id="formulario", method="POST")
+		form(id="formulario", method="POST" )
 			fieldset.no-border.legend-border
 				legend.selmecAzul.bold <span data-i18n="demo.utilizador_form.dados_basicos"></span>
 				.row
@@ -113,18 +113,18 @@ block content
 					.col.s12.m6.input-field
 						label(for="senha") <span data-i18n="demo.utilizador_form.password"></span>
 						input.preencher( autocomplete="off", type="password", id="senha", name="senha", value="#{Usuarios ? Usuarios[0].senha : ''}", style="font-family:")
+			.row#utilizador(users="#{users}")
+				fieldset.no-border
+					.row.buttons-container
+						if !Usuarios
+							.col.s12.m6.left-button
+								button(type="button", class="btn", id="registar_util") <span data-i18n="demo.utilizador_form.gravar"></span>
 
-			fieldset.no-border
-				.row.buttons-container
-					if !Usuarios
-						.col.s12.m6.left-button
-							button(type="button", class="btn", id="registar_util") <span data-i18n="demo.utilizador_form.gravar"></span>
-
-						.col.s12.m6.right-button
-							button(type="button", class="btn red", id="cancelar_util") <span data-i18n="demo.utilizador_form.cancelar"></span>
-					else
-						.col.s12.center
-							butoon#voltar_util(type="button", class="btn waves-efect waves-light activarAzul") << Back
+							.col.s12.m6.right-button
+								button(type="button", class="btn red", id="cancelar_util") <span data-i18n="demo.utilizador_form.cancelar"></span>
+						else
+							.col.s12.center
+								butoon#voltar_util(type="button", class="btn waves-efect waves-light activarAzul") << Back
 	block js
 		script(type="text/javascript" src="/js/jquery.mask.js")
 
