improvements on new user

--- a/views/utilizadorer.jade
+++ b/views/utilizadorer.jade
@@ -219,37 +219,37 @@ block content
 
 				switch($("#departamento").val()) {
 					case "Telco":
-						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value='Regional Manager' data-cont=611e2b8cf9b1b31cd868a30c>Director Regional</option><option value=regional_manager data-cont=611e3b3d6ed713019c50cf79>Supervisor</option><option value=Tecnico data-cont=616988fcd5a85a0794a0fbf9>Tecnico</option><option value=Assistente data-cont=611ded707d82f600d87c4be3>Assistente</option>";	
+						cargo.innerHTML = "<option value=Tecnico data-cont=616988fcd5a85a0794a0fbf9>Tecnico</option><option value=Assistente data-cont=611ded707d82f600d87c4be3>Assistente</option><option value=regional_manager data-cont=611e3b3d6ed713019c50cf79>Supervisor</option><option value='Regional Manager' data-cont=611e2b8cf9b1b31cd868a30c>Director Regional</option><option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option>";	
 						break;
 					case "Climatização e Electricidade":
-						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value='Regional Manager' data-cont=611e2b8cf9b1b31cd868a30c>Director Regional</option><option value=regional_manager data-cont=611e3b3d6ed713019c50cf79>Supervisor</option><option value=Tecnico data-cont=616988fcd5a85a0794a0fbf9>Tecnico</option><option value=Assistente data-cont=611ded707d82f600d87c4be3>Assistente</option><option value=Commercial data-cont=611e6bd559c6e30a006ede59>Commercial</option>";	
+						cargo.innerHTML = "<option value=Tecnico data-cont=616988fcd5a85a0794a0fbf9>Tecnico</option><option value=Assistente data-cont=611ded707d82f600d87c4be3>Assistente</option><option value=Commercial data-cont=611e6bd559c6e30a006ede59>Commercial</option><option value=regional_manager data-cont=611e3b3d6ed713019c50cf79>Supervisor</option><option value='Regional Manager' data-cont=611e2b8cf9b1b31cd868a30c>Director Regional</option><option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option>";	
 						break;
 					case "Financeiro":
-						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Contabilista data-cont=63fe12569d5ad1356cbb6062>Contabilista</option><option value=Procurement data-cont=615336500bd5ed0cdc5ea1a8>Procurement</option><option value=Assistente data-cont=611ded707d82f600d87c4be3>Assistente</option>";	
+						cargo.innerHTML = "<option value=Contabilista data-cont=63fe12569d5ad1356cbb6062>Contabilista</option><option value=Procurement data-cont=615336500bd5ed0cdc5ea1a8>Procurement</option><option value=Assistente data-cont=611ded707d82f600d87c4be3>Assistente</option><option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option>";	
 						break;
 					case "Tecnologias de Informação":
-						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value='Analista de Informática' data-cont=627e49eacba3d2105c26ed35>Analista de Informática</option><option value=Tecnico data-cont=616988fcd5a85a0794a0fbf9>Tecnico</option><option value=Assistente data-cont=611ded707d82f600d87c4be3>Assistente</option>";	
+						cargo.innerHTML = "<option value='Analista de Informática' data-cont=627e49eacba3d2105c26ed35>Analista de Informática</option><option value=Tecnico data-cont=616988fcd5a85a0794a0fbf9>Tecnico</option><option value=Assistente data-cont=611ded707d82f600d87c4be3>Assistente</option><option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option>";	
 						break;
 					case "Centro de Dados":
-						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value='Regional Manager' data-cont=611e2b8cf9b1b31cd868a30c>Director Regional</option><option value=regional_manager data-cont=611e3b3d6ed713019c50cf79>Supervisor</option><option value=Tecnico data-cont=616988fcd5a85a0794a0fbf9>Tecnico</option><option value=Assistente data-cont=611ded707d82f600d87c4be3>Assistente</option>";	
+						cargo.innerHTML = "<option value=Tecnico data-cont=616988fcd5a85a0794a0fbf9>Tecnico</option><option value=Assistente data-cont=611ded707d82f600d87c4be3>Assistente</option><option value=regional_manager data-cont=611e3b3d6ed713019c50cf79>Supervisor</option><option value='Regional Manager' data-cont=611e2b8cf9b1b31cd868a30c>Director Regional</option><option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option>";	
 						break;
 					case "Energia":
-						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Tecnico data-cont=616988fcd5a85a0794a0fbf9>Tecnico</option><option value=Assistente data-cont=611ded707d82f600d87c4be3>Assistente</option><option value=Commercial data-cont=611e6bd559c6e30a006ede59>Commercial</option>";	
+						cargo.innerHTML = "<option value=Tecnico data-cont=616988fcd5a85a0794a0fbf9>Tecnico</option><option value=Assistente data-cont=611ded707d82f600d87c4be3>Assistente</option><option value=Commercial data-cont=611e6bd559c6e30a006ede59>Commercial</option><option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option>";		
 						break;
 					case "Administrativo":
-						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Motorista data-cont=63fe12b27f40bc2d28aa758e>Motorista</option><option value=Assistente data-cont=611ded707d82f600d87c4be3>Assistente</option>";	
+						cargo.innerHTML = "<option value=Assistente data-cont=611ded707d82f600d87c4be3>Assistente</option><option value=Motorista data-cont=63fe12b27f40bc2d28aa758e>Motorista</option><option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option>";	
 						break;
 					case "Qualidade e Otimização":
-						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Tecnico data-cont=616988fcd5a85a0794a0fbf9>Tecnico</option><option value=Assistente data-cont=611ded707d82f600d87c4be3>Assistente</option>";	
+						cargo.innerHTML = "<option value=Tecnico data-cont=616988fcd5a85a0794a0fbf9>Tecnico</option><option value=Assistente data-cont=611ded707d82f600d87c4be3>Assistente</option><option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option>";			
 						break;
 					case "Centro de Suporte de Operações":
-						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value='Call Center' data-cont=63edea83d0fb2331e0e40eb9>Call Center</option>";	
+						cargo.innerHTML = "<option value='Call Center' data-cont=63edea83d0fb2331e0e40eb9>Call Center</option><option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option>";	
 						break;
 					case "Logística e Armazém":
-						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Motorista data-cont=63fe12b27f40bc2d28aa758e>Motorista</option><option value='Fiel de Armazém' data-cont=63fe136a72cae53f58eb366d>Fiel de Armazém</option><option value=Assistente data-cont=611ded707d82f600d87c4be3>Assistente</option>";	
+						cargo.innerHTML = "<option value=Assistente data-cont=611ded707d82f600d87c4be3>Assistente</option><option value=Motorista data-cont=63fe12b27f40bc2d28aa758e>Motorista</option><option value='Fiel de Armazém' data-cont=63fe136a72cae53f58eb366d>Fiel de Armazém</option><option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option>";	
 						break;
 					case "Recursos Humanos":
-						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option><option value=Assistente data-cont=611ded707d82f600d87c4be3>Assistente</option>";	
+						cargo.innerHTML = "<option value=Assistente data-cont=611ded707d82f600d87c4be3>Assistente</option><option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) do Departamento</option>";	
 						break;
 					case "Direcção Geral":
 						cargo.innerHTML = "<option value=Manager data-cont=627e49eacba3d2105c26ed35>Director(a) Geral</option>";	
